# bttbw

./: CMakeLists.txt  Doxyfile  README.md  TODO
cmake/: FindAllegro5.cmake  FindAllegro5ACodec.cmake  FindAllegro5Audio.cmake  FindAllegro5Font.cmake  FindAllegro5Image.cmake  FindAllegro5Main.cmake  FindAllegro5Primitives.cmake  FindAllegro5TTF.cmake
data/: CMakeLists.txt  bttbw.desktop  song-fg.flac  ticklemonster.desktop
data/icons/: CMakeLists.txt  icon.rc
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.c  utils.c  utils.h
src/gamestates/: CMakeLists.txt  dosowisko.c  info.c  level.c  level.h  loading.c  menu.c  theend.c
